--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
+        "express-handlebars": "^6.0.6",
+        "jsonwebtoken": "^8.5.1",
         "method-override": "^3.0.0",
         "mongoose": "^6.5.2",
         "mongoose-delete": "^0.5.4",
