--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@leecheuk/react-google-login": "^5.4.1",
+    "@react-oauth/google": "^0.2.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +19,7 @@
     "bootstrap": "^5.2.1",
     "classnames": "^2.3.1",
     "express": "^4.18.1",
+    "gapi-script": "^1.2.0",
     "jquery": "^3.6.1",
     "mongoose-slug-generator": "^1.0.4",
     "nodemon": "^2.0.19",
