--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.1",
         "express-handlebars": "^6.0.6",
+        "google-auth-library": "^8.5.2",
         "jsonwebtoken": "^8.5.1",
         "method-override": "^3.0.0",
         "mongoose": "^6.5.2",
