--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
         "method-override": "^3.0.0",
         "mongoose": "^6.5.2",
         "mongoose-delete": "^0.5.4",
-        "mongoose-slug-generator": "^1.0.4"
+        "mongoose-slug-generator": "^1.0.4",
+        "nodemailer": "^6.8.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.19"
